--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - images/cooking.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -75,17 +76,24 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+     - family: Georgia
+       fonts:
+         - asset: fonts/georgia.ttf
+           weight: 700
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+     - family: Adobe Devanagari
+       fonts:
+         - asset: fonts/AdobeDevanagari-Regular.otf
   #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+           weight: 700
+     - family: Segoe
+       fonts:
+          - asset: fonts/segoepr.ttf
+           #       - asset: fonts/TrajanPro_Bold.ttf
+            weight: 700
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
