--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - images/cooking.png
+      - images/profile_icon.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -97,6 +98,10 @@ flutter:
      - family: Maiandra
        fonts:
          - asset: fonts/MaiandraGDRegular.ttf
+           weight: 700
+     - family: Rockwell
+       fonts:
+         - asset: fonts/ROCK.TTF
            weight: 700
 
 
