--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.0.2
   getwidget: ^2.0.4
   auto_size_text: ^3.0.0
+  form_field_validator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
