--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   getwidget: ^2.0.4
   auto_size_text: ^3.0.0
   form_field_validator: ^1.1.0
+  clipboard: ^0.1.3
 
 dev_dependencies:
   flutter_test:
