--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   auto_size_text: ^3.0.0
   form_field_validator: ^1.1.0
   clipboard: ^0.1.3
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
