--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   form_field_validator: ^1.1.0
   clipboard: ^0.1.3
   flutter_switch: ^0.3.2
+  firebase_core: ^1.13.1
+  cloud_firestore: ^3.1.10
 
 dev_dependencies:
   flutter_test:
