--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_switch: ^0.3.2
   firebase_core: ^1.13.1
   cloud_firestore: ^3.1.10
+  get: ^4.3.8
+  firestore_search: ^0.1.9
 
 dev_dependencies:
   flutter_test:
