--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^3.1.10
   get: ^4.3.8
   firestore_search: ^0.1.9
+  firebase_auth: ^3.3.10
 
 dev_dependencies:
   flutter_test:
