--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   get: ^4.3.8
   firestore_search: ^0.1.9
   firebase_auth: ^3.3.10
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
