--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,13 @@ dependencies:
   firestore_search: ^0.1.9
   firebase_auth: ^3.3.10
   shared_preferences: ^2.0.15
+  google_nav_bar: ^5.0.6
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: true
+  ios: false
+  image_path: "images/cooking.png"
 
 dev_dependencies:
   flutter_test:
